--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="visibility_unlisted">未収載</string>
     <string name="visibility_private">フォロワー限定</string>
     <string name="visibility_direct">ダイレクト</string>
+    <string name="boosted_by">%sさんがブースト</string>
 </resources>
